--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -101,8 +101,8 @@
 
           </div>
         </div>
-        <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img">
-          <img src="assets/img/kelly-hero.png" class="img-fluid" alt="">
+        <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up">
+          <img src="assets/img/kelly/kelly2.png" class="img-fluid" alt="">
 
 
         </div>
@@ -132,7 +132,7 @@
           </div>
         </div>
         <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up">
-          <img src="assets/img/kelly-hero.png" class="img-fluid" alt="">
+          <img src="assets/img/kelly/kelly1.png" class="img-fluid" alt="">
 
 
         </div>
@@ -164,7 +164,7 @@
             </div>
           </div>
           <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-1 hero-img" data-aos="fade-up">
-            <img src="assets/img/kelly-hero.png" class="img-fluid" alt="">
+            <img src="assets/img/jason/jason1.png" class="img-fluid" alt="">
 
 
           </div>
@@ -195,7 +195,7 @@
             </div>
           </div>
           <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up">
-            <img src="assets/img/kelly-hero.png" class="img-fluid" alt="">
+            <img src="assets/img/kenneth/kenneth1.png" class="img-fluid" alt="">
 
 
           </div>
@@ -476,7 +476,10 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#hero">Kelly AI</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#hero">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="kelly.html">Kelly AI - Sexul Health</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="jason.html">Jason AI - Nutrition & Fitness</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="kenneth.html">Kenenth AI - Mental health & Well-being</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Online Medical Consultation</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Our App</a></li>
 
