--- a/jason.html
+++ b/jason.html
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up">
-          <img src="assets/img/kelly-hero.png" class="img-fluid" alt="">
+          <img src="assets/img/jason/jason1.png" class="img-fluid" alt="">
 
 
         </div>
@@ -123,24 +123,24 @@
 
         <div class="row content">
           <div class="col-md-4" data-aos="fade-right">
-            <img src="assets/img/jason-hero2.png" class="img-fluid" alt="">
+            <img src="assets/img/jason/jason2.png" class="img-fluid" alt="">
           </div>
           <div class="col-md-8 pt-4" data-aos="fade-up">
-            <h3 class="white">🫶 For Teenagers, Young Adults and Grown Ups</h3>
+            <h3 class="white">🫶 Your Personalised Physical Wellness Partner, Available 24/7</h3>
             <p>
-              問Jason任何你不會問你的父母或醫生的尷尬和私密的問題。Jason使用人工智能技術並會不斷學習和改進。
+              問Jason任何關於營養和健身的私密的問題。Jason使用人工智能技術並會不斷學習和改進。
             </p>
             <p>
-              Ask Jason any embarrasing and intimate questions that you would not have asked your parents or doctor. Jason is powered by AI (GPT) and is constantly learning and improving as you interact with it.
+              Ask Jason any private questions about nutrition, fitness and physical health. Jason is powered by AI (GPT) and is constantly learning and improving as you interact with it.
             </p>
             <ul>
-              <li>🆘 Where do I get emergency medicine?</li>
-              <li>🙊 What to do if  my boyfriend/girlfriend is pressuring me into sex?</li>
-              <li>🤌 Is my penis/vagina normal?</li>
-              <li>📍 Where can I get tested for STDs?</li>
-              <li>⚧️ Are there gender-affirming hormone therapies in Hong Kong?</li>
-              <li>💊 How much are birth control pills?</li>
-              <li>🥼 Wil the doctor tell my parents if I have an STD?</li>
+              <li>🏋️‍♀️ I'm at the gym. The machine in front of me is called hip adduction. How do I use it?</li>
+              <li>🐟 I'm trying to gain muscle as an 18 year old. Should I take protein powder?</li>
+              <li>🥦 I'm a vegetarian. Create a balanced diet that meets my nutritional needs.</li>
+              <li>🍎 I am a busy student. Give me some healthy snack options I can get from 7/11.</li>
+              <li>🚲 香港邊度可以踩長途單車？</li>
+              <li>🏃‍♂️ 我點樣先至訓練下年的渣打馬拉松？</li>
+              <li>🥒 我是一個大學生，點樣可以減肥？</li>
             </ul>
 
               <button id="myBtn" onclick="window.botpressWebChat.sendEvent({ type: 'show' });" class="download-btn"><i class="bi bi-people-fill"></i>Talk to Jason</button>
@@ -362,7 +362,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2 class="tabmedtitle">😛 Friend, Not Just a Doctor - That's Jason</h2>
+          <h2 class="tabmedtitle">😛 Health Empowerer, Not Just a Nutritionist - That's Jason</h2>
         </div>
 
       </div>
@@ -370,18 +370,18 @@
       <div class="container-fluid" data-aos="fade-up">
         <div class="gallery-slider swiper">
           <div class="swiper-wrapper">
-            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-1.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-1.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-2.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-2.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-3.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-3.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-4.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-4.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-5.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-5.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-6.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-6.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-7.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-7.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-8.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-8.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-9.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-9.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-10.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-10.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-11.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-11.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-12.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-12.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/jasonscreenshots/gallery-1.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/jasonscreenshots/gallery-1.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/jasonscreenshots/gallery-2.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/jasonscreenshots/gallery-2.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/jasonscreenshots/gallery-3.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/jasonscreenshots/gallery-3.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/jasonscreenshots/gallery-4.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/jasonscreenshots/gallery-4.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/jasonscreenshots/gallery-5.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/jasonscreenshots/gallery-5.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/jasonscreenshots/gallery-6.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/jasonscreenshots/gallery-6.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/jasonscreenshots/gallery-7.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/jasonscreenshots/gallery-7.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/jasonscreenshots/gallery-8.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/jasonscreenshots/gallery-8.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/jasonscreenshots/gallery-9.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/jasonscreenshots/gallery-9.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/jasonscreenshots/gallery-10.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/jasonscreenshots/gallery-10.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/jasonscreenshots/gallery-11.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/jasonscreenshots/gallery-11.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/jasonscreenshots/gallery-12.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/jasonscreenshots/gallery-12.png" class="img-fluid" alt=""></a></div>
 
           </div>
           <div class="swiper-pagination"></div>
@@ -458,9 +458,10 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="kelly.html">Kelly AI</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#hero">Jason AI</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="kenneth.html">Kenenth AI</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="kelly.html">Kelly AI - Sexul Health</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#hero">Jason AI - Nutrition & Fitness</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="kenneth.html">Kenenth AI - Mental health & Well-being</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Online Medical Consultation</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Our App</a></li>
 
