--- a/kelly.html
+++ b/kelly.html
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up">
-          <img src="assets/img/kelly-hero.png" class="img-fluid" alt="">
+          <img src="assets/img/kelly/kelly1.png" class="img-fluid" alt="">
 
 
         </div>
@@ -123,7 +123,7 @@
 
         <div class="row content">
           <div class="col-md-4" data-aos="fade-right">
-            <img src="assets/img/kelly-hero2.png" class="img-fluid" alt="">
+            <img src="assets/img/kelly/kelly2.png" class="img-fluid" alt="">
           </div>
           <div class="col-md-8 pt-4" data-aos="fade-up">
             <h3 class="white">🫶 For Teenagers, Young Adults and Grown Ups</h3>
@@ -458,9 +458,10 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#hero">Kelly AI</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="jason.html">Jason AI</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="kenneth.html">Kenenth AI</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#hero">Kelly AI - Sexul Health</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="jason.html">Jason AI - Nutrition & Fitness</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="kenneth.html">Kenenth AI - Mental health & Well-being</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Online Medical Consultation</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Our App</a></li>
 
