--- a/telemed.html
+++ b/telemed.html
@@ -50,7 +50,9 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto" href="index.html">Kelly AI</a></li>
+          <li><a class="nav-link scrollto" href="kelly.html">Kelly AI</a></li>
+          <li><a class="nav-link scrollto active" href="jason.html">Jason AI</a></li>
+          <li><a class="nav-link scrollto" href="kenneth.html">Kenneth AI</a></li>
           <li><a class="nav-link scrollto active" href="telemed.html">Online Medical Consultation</a></li>
           <!-- <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
           <li><a class="nav-link scrollto" href="#faq">F.A.Q</a></li> -->
@@ -574,9 +576,12 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Kelly AI</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Online Medical Consultation</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Our App</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="kelly.html">Kelly AI - Sexul Health</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="jason.html">Jason AI - Nutrition & Fitness</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="kenneth.html">Kenenth AI - Mental health & Well-being</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#hero">Online Medical Consultation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#hero">Our App</a></li>
 
             </ul>
           </div>
