--- a/kenneth.html
+++ b/kenneth.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Meet Kelly, Your AI Sexual Health Advisor in Hong Kong</title>
+  <title>Meet Kelly, Your AI Mental Health & Well-being Advisor in Hong Kong</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
