--- a/jason.html
+++ b/jason.html
@@ -29,6 +29,16 @@
   <link href="assets/css/jasonstyle.css" rel="stylesheet">
   <link href="assets/css/botpresss.css" rel="stylesheet">
 
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DGCE0VDQLP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DGCE0VDQLP');
+</script>
+
   <!-- =======================================================
   * Template Name: Appland - v4.10.0
   * Template URL: https://bootstrapmade.com/free-bootstrap-app-landing-page-template/
