--- a/telemed.html
+++ b/telemed.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>TabMed | Online Doctor Consultation & Booking in Hong Kong</title>
+  <title>TabMed | Online Doctor Consultation & Booking in Hong Kong, Powered by AI</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -27,6 +27,16 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DGCE0VDQLP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DGCE0VDQLP');
+</script>
 
   <!-- =======================================================
   * Template Name: Appland - v4.10.0
