--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
             <h2>Ask for answers to any health-related private questions without the embarrassment in-person. <br><br>詢問任何與健康相關的私人問題，亦都不會感到尷尬。<br><br>Free and <strong>anonymous</strong>. 免費和<strong>匿名</strong>。</h2>
             <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
 
+            <a href="https://docs.google.com/forms/d/1epN9MZ1ep5TM94BVjWQAzQy7Bfb1O4MSzO5xWdPSgms/viewform?edit_requested=true" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-chat-heart-fill"></i>Feedback for Us</button></a>
+
 
           </div>
         </div>
