--- a/kenneth.html
+++ b/kenneth.html
@@ -38,6 +38,7 @@
 
   gtag('config', 'G-DGCE0VDQLP');
 </script>
+<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/e8528d4f514a5b62d57b66b8f/03ac6df52a92542d348b72492.js");</script>
 
   <!-- =======================================================
   * Template Name: Appland - v4.10.0
@@ -372,7 +373,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2 class="tabmedtitle">😛 More than a Therpist, a Life Coach - That's Kenneth</h2>
+          <h2 class="tabmedtitle">😛 More than a Therapist, a Life Coach - That's Kenneth</h2>
         </div>
 
       </div>
