--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 
   gtag('config', 'G-DGCE0VDQLP');
 </script>
-<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/e8528d4f514a5b62d57b66b8f/03ac6df52a92542d348b72492.js");</script>
 
   <!-- =======================================================
   * Template Name: Appland - v4.10.0
@@ -422,10 +421,13 @@
       </div>
     </section> End Frequently Asked Questions Section -->
 
-
+    <div>
+      <iframe src="https://embeds.beehiiv.com/87fbe5c9-e88c-4579-a8e5-fa8caf68f417" data-test-id="beehiiv-embed" width="100%" height="320" frameborder="0" scrolling="no" style="border-radius: 4px; border: 2px solid #e5e7eb; margin: 0; background-color: transparent;"></iframe>
+    </div>
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
+
 
         <div class="section-title">
           <h2 class="tabmedtitle mb-4">🧠 We Believe AI & Telemedicine is the Future of Healthcare</h2>
@@ -459,6 +461,7 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
+
 
     <div class="footer-newsletter">
       <div class="container">
