--- a/kenneth.html
+++ b/kenneth.html
@@ -38,7 +38,6 @@
 
   gtag('config', 'G-DGCE0VDQLP');
 </script>
-<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/e8528d4f514a5b62d57b66b8f/03ac6df52a92542d348b72492.js");</script>
 
   <!-- =======================================================
   * Template Name: Appland - v4.10.0
@@ -401,6 +400,9 @@
       </div>
     </section><!-- End Gallery Section -->
 
+    <div>
+      <iframe src="https://embeds.beehiiv.com/87fbe5c9-e88c-4579-a8e5-fa8caf68f417" data-test-id="beehiiv-embed" width="100%" height="320" frameborder="0" scrolling="no" style="border-radius: 4px; border: 2px solid #e5e7eb; margin: 0; background-color: transparent;"></iframe>
+    </div>
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
