--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>👋 Meet Your Hong Kong Based AI Sexual Health, Fitness, Nutrition & Mental Wellbeing Advisor</title>
+  <title>🇭🇰 Meet Your HK Based AI Sexual, Physical & Mental Health Advisor</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
