--- a/insider.html
+++ b/insider.html
@@ -65,9 +65,10 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#features">Our Service</a></li>
-          <li><a class="nav-link scrollto" href="#gallery">Our App</a></li>
+          <li><a class="nav-link scrollto" href="kelly.html">Kelly AI</a></li>
+          <li><a class="nav-link scrollto" href="jason.html">Jason AI</a></li>
+          <li><a class="nav-link scrollto" href="kenneth.html">Kenneth AI</a></li>
+          <li><a class="nav-link scrollto" href="telemed.html">Online Medical Consultation</a></li>
           <!-- <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
           <li><a class="nav-link scrollto" href="#faq">F.A.Q</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -87,11 +88,11 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li> -->
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li><a class="getstarted scrollto" href="mailto: tabmedhk@gmail.com">Partner With Us</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
+
 
     </div>
   </header><!-- End Header -->
