--- a/insider.html
+++ b/insider.html
@@ -163,9 +163,11 @@ window.fcWidgetMessengerConfig = {
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#hero">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#features">Our Service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#gallery">Our app</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#contact">Contact Us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="kelly.html">Kelly AI - Sexul Health</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="jason.html">Jason AI - Nutrition & Fitness</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="kenneth.html">Kenenth AI - Mental health & Well-being</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Online Medical Consultation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Our App</a></li>
             </ul>
           </div>
 <!--
