--- a/insider.html
+++ b/insider.html
@@ -130,8 +130,7 @@ window.fcWidgetMessengerConfig = {
   <footer id="footer">
 
     <div class="p-3">
-      <iframe src="https://beta.pickaxeproject.com/axe?id=AI_Differential_Diagnosis__Clinical_Plan_FFML0&mode=embed&theme=light&opacity=100" width="100%" height="600px" onMouseOver="this.style.boxShadow='0 2px 2px 1px rgba(0,0,0,0.2)'" onMouseOut="this.style.boxShadow='none'" style="border:0;transition:.3s;" frameBorder="0"></iframe>
-   </div>
+<iframe src="https://beta.pickaxeproject.com/axe?id=AI_Differential_Diagnosis__Clinical_Plan_FFML0&mode=embed_gold&theme=light&opacity=100" width="100%" height="600px" onMouseOver="this.style.boxShadow='0 2px 2px 1px rgba(0,0,0,0.2)'" onMouseOut="this.style.boxShadow='none'" style="border:0;transition:.3s;" frameBorder="0"></iframe>   </div>
 
     <div>
       <iframe src="https://embeds.beehiiv.com/87fbe5c9-e88c-4579-a8e5-fa8caf68f417" data-test-id="beehiiv-embed" width="100%" height="320" frameborder="0" scrolling="no" style="border-radius: 4px; border: 2px solid #e5e7eb; margin: 0; background-color: transparent;"></iframe>
