--- a/index.html
+++ b/index.html
@@ -420,9 +420,11 @@
 
       </div>
     </section> End Frequently Asked Questions Section -->
+  <section class="white">
     <div class="p-3">
-<iframe src="https://beta.pickaxeproject.com/axe?id=AI_Differential_Diagnosis__Clinical_Plan_FFML0&mode=embed_gold&theme=light&opacity=100" width="100%" height="600px" onMouseOver="this.style.boxShadow='0 2px 2px 1px rgba(0,0,0,0.2)'" onMouseOut="this.style.boxShadow='none'" style="border:0;transition:.003s;" frameBorder="0"></iframe>
+<iframe width="100%" height="1000px" src="https://beta.pickaxeproject.com/axe?id=AI_Differential_Diagnosis__Clinical_Plan_FFML0&mode=embed_gold&theme=light&opacity=0" onMouseOver="this.style.boxShadow='0 0px 0px 0px rgba(0,0,0,0.2)'" onMouseOut="this.style.boxShadow='none'" style="border:0;transition:.001s;" frameBorder="0"></iframe>
    </div>
+</section>
 
     <div>
       <iframe src="https://embeds.beehiiv.com/87fbe5c9-e88c-4579-a8e5-fa8caf68f417" data-test-id="beehiiv-embed" width="100%" height="320" frameborder="0" scrolling="no" style="border-radius: 4px; border: 2px solid #e5e7eb; margin: 0; background-color: transparent;"></iframe>
@@ -433,7 +435,7 @@
 
 
         <div class="section-title">
-          <h2 class="tabmedtitle mb-4">🧠 We Believe AI & Telemedicine is the Future of Healthcare</h2>
+          <h2 class="tabmedtitle mb-4">📰 We Believe AI & Telemedicine is the Future of Healthcare</h2>
           <iframe width="380" height="213" src="https://www.youtube.com/embed/RXOyxN79w5Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
 
