--- a/kelly.html
+++ b/kelly.html
@@ -64,6 +64,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Kelly AI</a></li>
           <li><a class="nav-link scrollto" href="jason.html">Jason AI</a></li>
           <li><a class="nav-link scrollto" href="kenneth.html">Kenneth AI</a></li>
+          <li><a class="nav-link scrollto" href="diagnosis.html">Differential Diagnostic AI</a></li>
           <li><a class="nav-link scrollto" href="telemed.html">Online Medical Consultation</a></li>
           <!-- <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
           <li><a class="nav-link scrollto" href="#faq">F.A.Q</a></li> -->
@@ -99,7 +100,7 @@
       <div class="row">
         <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
           <div>
-            <h1 class="mb-4">👋 Meet Kelly, Your AI Sexual Health Advisor in Hong Kong</h1>
+            <h1 class="mb-4">👋🏻 Meet Kelly, Your AI Sexual Health Advisor in Hong Kong</h1>
             <h2>Kelly - 你的AI性健康的醫生。<br><br>Ask Kelly for quick answers to any intimate sexual health-related questions without the embarrassment in-person.<br><br>向Kelly詢問任何與性健康相關的問題，亦都不會感到尷尬。<br><br>Free and <strong>anonymous</strong>. 免費和<strong>匿名</strong>。</h2>
 
             <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
@@ -400,8 +401,6 @@
       </div>
     </section><!-- End Gallery Section -->
 
-    <div class="p-3">
-<iframe src="https://beta.pickaxeproject.com/axe?id=AI_Differential_Diagnosis__Clinical_Plan_FFML0&mode=embed_gold&theme=light&opacity=100" width="100%" height="600px" onMouseOver="this.style.boxShadow='0 2px 2px 1px rgba(0,0,0,0.2)'" onMouseOut="this.style.boxShadow='none'" style="border:0;transition:.3s;" frameBorder="0"></iframe>   </div>
 
     <div>
       <iframe src="https://embeds.beehiiv.com/87fbe5c9-e88c-4579-a8e5-fa8caf68f417" data-test-id="beehiiv-embed" width="100%" height="320" frameborder="0" scrolling="no" style="border-radius: 4px; border: 2px solid #e5e7eb; margin: 0; background-color: transparent;"></iframe>
@@ -478,6 +477,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#hero">Kelly AI - Sexul Health</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="jason.html">Jason AI - Nutrition & Fitness</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="kenneth.html">Kenenth AI - Mental health & Well-being</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="diagnosis.html">Differential Diagnstic AI</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Online Medical Consultation</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Our App</a></li>
 
