--- a/lengjai.html
+++ b/lengjai.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>TabMed | 🩺 Meet our Differential Diagnostic AI </title>
+  <title>TabMed | 🧧 Meet our Lengjai Kenneth </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -100,26 +100,25 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="gray d-flex align-items-center">
+  <section id="hero" class="pink d-flex align-items-center">
 
     <div class="container">
       <div class="row">
-      <div class="col-lg-13 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1">
+        <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
           <div>
-            <h1 class="mb-4">🇭🇰 Meet Our Differential Diagnostic AI
-            </h1>
-            <h5>Enter your patient's clinical profile to obtain a differential diagnosis outcome and a tailored clinical strategy.<br><br>輸入你嘅病人臨床資料，以獲得診斷結果同埋度身訂造嘅治療方案。<br></h5>
-
+            <h1 class="mb-4"> 🧧 Meet Kenneth, Your Personal Lengjai</h1>
+            <h2>Kenneth - 你的私人靚仔。<br>
+            </h2>
 
             <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
 
-            <!-- <button id="myBtn" onclick="window.botpressWebChat.sendEvent({ type: 'show' });" class="download-btn"><i class="bi bi-people-fill"></i>Talk to Jason</button> -->
-
-
-            <!-- <button type="button" class="btn btn-outline-secondary">Beta V1.0</button> -->
-
 
           </div>
+        </div>
+        <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up">
+          <img src="assets/img/lengjai.png" class="img-fluid" alt="">
+
+
         </div>
       </div>
     </div>
