--- a/kenneth.html
+++ b/kenneth.html
@@ -65,27 +65,8 @@
           <li><a class="nav-link scrollto" href="jason.html">Jason AI</a></li>
           <li><a class="nav-link scrollto active" href="#hero">Kenneth AI</a></li>
           <li><a class="nav-link scrollto" href="diagnosis.html">Differential Diagnostic AI</a></li>
-          <li><a class="nav-link scrollto" href="telemed.html">Online Medical Consultation</a></li>
-          <!-- <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
-          <li><a class="nav-link scrollto" href="#faq">F.A.Q</a></li> -->
-          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li> -->
-          <li><a class="getstarted scrollto" href="mailto: tabmedhk@gmail.com">Partner With Us</a></li>
+          <li><a class="nav-link scrollto" href="agency.html">Incorporating ChatGPT into Your Business</a></li>
+          <li><a class="getstarted scrollto" href="agency.html">Work With Us</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -401,7 +382,7 @@
       </div>
     </section><!-- End Gallery Section -->
 
-  
+
     <div>
       <iframe src="https://embeds.beehiiv.com/87fbe5c9-e88c-4579-a8e5-fa8caf68f417" data-test-id="beehiiv-embed" width="100%" height="320" frameborder="0" scrolling="no" style="border-radius: 4px; border: 2px solid #e5e7eb; margin: 0; background-color: transparent;"></iframe>
     </div>
@@ -480,6 +461,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="diagnosis.html">Differential Diagnstic AI</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Online Medical Consultation</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Our App</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="agency.html">Incorporating ChatGPT into Your Business</a></li>
 
             </ul>
           </div>
