--- a/index.html
+++ b/index.html
@@ -75,10 +75,17 @@
     </div>
   </header><!-- End Header -->
 
+
   <!-- ======= actual Hero Section ======= -->
   <section id="hero" class="mainhero d-flex align-items-center">
 
+
     <div class="container">
+      <div class="alert alert-danger" role="alert">
+          <a href="agency.html" style="text-decoration:none">We are helping businesses build AI ChatGPT-powered WhatsApp Customer Service and Lead Generation Chatbots. Learn more 👉</a>
+        </div>
+
+
       <div class="row">
         <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1">
           <div>
@@ -531,7 +538,7 @@
   </footer><!-- End Footer -->
 
 <!-- Back to top button -->
-  <!-- <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a> -->
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
