--- a/telemed.html
+++ b/telemed.html
@@ -76,6 +76,9 @@
   <section id="hero" class="d-flex align-items-center">
 
     <div class="container">
+      <div class="alert alert-danger mb-3" role="alert">
+          <a href="agency.html" style="text-decoration:none">We are helping businesses build AI ChatGPT-powered WhatsApp Customer Service and Lead Generation Chatbots. Learn more 👉</a>
+        </div>
       <div class="row">
         <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
           <div>
