--- a/agency.html
+++ b/agency.html
@@ -106,6 +106,46 @@
   </section><!-- End Hero -->
 
   <main id="main">
+    <section id="features" class="features">
+      <div class="container">
+
+        <div class="section-title">
+          <h1>10x Your Customer Engagement With ChatGPT + ALL Your Business Data</h1>
+          <p><strong>What If ChatGPT Knew ALL Your Business Content?</strong> Here at TabMed, we build and handle the entire Customer Engagement AI Platform on Whatsapp/FaceBook Messenger/your website for your business to grow Customer <strong>Engagement, Employee Efficiency and Revenue</strong> with your own business data + ChatGPT.</p>
+        </div>
+
+            <div class="content d-flex flex-column justify-content-center">
+              <div class="row">
+                <div class="col-md-6 icon-box" data-aos="fade-up">
+                  <h4>🤖 Custom ChatGPT Built For You</h4>
+                  <p>We will incorporate <strong>all of your business content and data</strong> into your AI chatbot, hence tailored to your specific business needs, ensuring seamless integration with your existing workflows and systems, and providing an enhanced customer experience.</p>
+                </div>
+                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+                  <h4>🔋 Power Up Your Business Data</h4>
+                  <p>Our AI chatbots leverage your existing business data to provide <strong>personalized and contextually relevant</strong> interactions, unlocking the full potential of your data and enhancing the overall customer experience.</p>
+                </div>
+                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+                  <h4>📊 Positive ROI for Your Business</h4>
+                  <p>Chat-GPT Driven chatbots can deliver up to a 30% reduction in customer support costs, while <strong>increasing customer retention by 25%</strong> and driving new sales. This cost-effective solution contributes to your business's long-term success by generating an impressive return on investment.</p>
+                </div>
+                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
+                  <h4>🌐 Multichannel Integration</h4>
+                  <p>We will seamlessly incorporate your AI chatbots into <strong>WhatsApp/Facebook Messenger or your website</strong>, providing a consistent and unified customer experience across multiple touchpoints.</p>
+                </div>
+                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+                  <h4>🛠️ Seamless API Integrations</h4>
+                  <p>We will help you integrate effortlessly with various APIs, enabling a <strong>wide range of functionalities</strong> such as event registration, feedback gathering, payment processing, and subscription management. This streamlined approach creates a convenient and efficient customer experience, further enhancing your business offerings.</p>
+                </div>
+                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
+                  <h4>📈 Drive Revenue Growth with Tangible Results</h4>
+                  <p>By efficiently handling customer inquiries, guiding users through the sales funnel, and providing personalized product and service recommendations, your ChatGPT-driven chatbot can contribute to a <strong>20% increase in sales and revenue</strong>, directly impacting your bottom line and business growth.</p>
+                </div>
+              </div>
+            </div>
+
+
+      </div>
+    </section><!-- End App Features Section -->
 
 
 
@@ -130,7 +170,7 @@
               <li>⚡ <strong>Faster response times</strong>: AI chatbots can handle multiple customer queries simultaneously, resulting in quicker and more efficient customer support and lead generation.</li>
               <li>🎯 <strong>Improved customer satisfaction</strong>: ChatGPT-powered chatbots deliver accurate, timely, and helpful responses, leading to happier customers.</li>
               <li>🚀 <strong>Enhanced team productivity</strong>: By offloading repetitive tasks to chatbots, your team can concentrate on tasks that drive growth and revenue.</li>
-              <li>🚀 <strong>The Rise of WhatsApp-Led Growth</strong>: With over 2 billion active users worldwide, integrating a ChatGPT-driven chatbot into WhatsApp allows businesses to tap into this vast user base, making your services more accessible and driving growth.</li>
+              <li>📈 <strong>The Rise of WhatsApp-Led Growth</strong>: With over 2 billion active users worldwide, integrating a ChatGPT-driven chatbot into WhatsApp allows businesses to tap into this vast user base, making your services more accessible and driving growth.</li>
             </ul>
             <p class="mb-5">
               We are your strategic partner in harnessing the full potential of ChatGPT for your business. Our expertise in seamlessly integrating AI chatbots into WhatsApp and web platforms ensures that you stay ahead of the competition and unlock new opportunities for success. <strong>Don't miss out on the AI revolution</strong>.
@@ -174,7 +214,7 @@
           </div>
           <div class="col-md-8 pt-5" data-aos="fade-up">
             <h3>Why Choose Us as Your ChatGPT Agency</h3>
-            <p>TabMed, a leader in emerging technology, has developed innovative AI chatbots like Kelly, Jason, and Kenneth to educate the Hong Kong population on sexual, physical, and mental health. We're eager to collaborate with your business to boost growth by integrating AI-powered chatbots into WhatsApp, FaceBook Messenger or your website for exceptional customer service and lead generation.</p>
+            <p>TabMed, a leader in emerging technology, has developed innovative AI chatbots like <a href="kelly.html" target="_blank">Kelly</a>, <a href="kelly.html" target="_blank">Jason</a>, and <a href="kelly.html" target="_blank">Kenneth</a> to educate the Hong Kong population on sexual, physical, and mental health. We're eager to collaborate with your business to boost growth by integrating AI-powered chatbots into WhatsApp, FaceBook Messenger or your website for exceptional customer service and lead generation.</p>
             <p>Fundamentally at our core, we recognize the importance of outstanding customer experience for your business's success. Our bespoke ChatGPT solutions are tailored to meet your specific requirements, ensuring that our chatbots deliver valuable information and support while remaining engaging and accessible.</p>
             <p>Reach out to us to explore how ChatGPT can elevate your business and fulfill your unique goals. Our team is devoted to crafting a captivating and engaging brand experience for your customers.</p>
             <a href="tel:+85269025557" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-telephone-fill"></i>Call Us</button></a>
@@ -188,7 +228,7 @@
         <div class="row content">
             <h3 class="text-center">TabMed Helps You Integrate AI for Seamless Business Growth</h3>
             <p class="fst-italic text-center">
-              At our core, we help businesses boost customer engagement, streamline operations, and expanding our global reach with AI technology including text-to-text, text-to-image, image-to-text, voice-to-text, voice-to-voice and text-to-voice.
+              At our core, we help businesses boost customer engagement, streamline operations, and expanding global reach by leveraging cutting-edge AI technology such as <strong><a href="https://openai.com/product/gpt-4" target="_blank">GPT3.5/GPT4</a>, <a href="https://openai.com/product/dall-e-2" target="_blank">Dall-E 2</a>, <a href="https://stablediffusionweb.com/" target="_blank">Stable Diffusion</a>, <a href="https://www.midjourney.com/" target="_blank">Midjourney</a>, <a href="https://www.perplexity.ai/" target="_blank">Perplexity</a>, <a href="https://www.anthropic.com/" target="_blank">Anthropic</a>, <a href="https://openai.com/research/whisper" target="_blank">Whisper API</a></strong> etc. Businesses can differentiate themselves from their competitors and stay ahead in an ever-evolving market.
             </p>
 
           <div class="col-md-4  pt-5 order-1 order-md-2" data-aos="fade-up">
@@ -241,7 +281,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h3>Experts Weight in On the Conversation</h3>
+          <h3>Experts Weigh in On the Conversation</h3>
           <p>Why AI-powered WhatsApp is the future of lead generation and growth for customer support and engagement.</p>
         </div>
 
