--- a/agency.html
+++ b/agency.html
@@ -117,27 +117,33 @@
             <div class="content d-flex flex-column justify-content-center">
               <div class="row">
                 <div class="col-md-6 icon-box" data-aos="fade-up">
-                  <h4>🤖 Custom ChatGPT Built For You</h4>
+                  <i class="bx">🤖</i>
+                  <h4>Custom ChatGPT Built For You</h4>
                   <p>We will incorporate <strong>all of your business content and data</strong> into your AI chatbot, hence tailored to your specific business needs, ensuring seamless integration with your existing workflows and systems, and providing an enhanced customer experience.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-                  <h4>🔋 Power Up Your Business Data</h4>
+                  <i class="bx">🔋</i>
+                  <h4>Power Up Your Business Data</h4>
                   <p>Our AI chatbots leverage your existing business data to provide <strong>personalized and contextually relevant</strong> interactions, unlocking the full potential of your data and enhancing the overall customer experience.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-                  <h4>📊 Positive ROI for Your Business</h4>
+                  <i class="bx">📊 </i>
+                  <h4>Positive ROI for Your Business</h4>
                   <p>Chat-GPT Driven chatbots can deliver up to a 30% reduction in customer support costs, while <strong>increasing customer retention by 25%</strong> and driving new sales. This cost-effective solution contributes to your business's long-term success by generating an impressive return on investment.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-                  <h4>🌐 Multichannel Integration</h4>
+                  <i class="bx">🌐</i>
+                  <h4>Multichannel Integration</h4>
                   <p>We will seamlessly incorporate your AI chatbots into <strong>WhatsApp/Facebook Messenger or your website</strong>, providing a consistent and unified customer experience across multiple touchpoints.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-                  <h4>🛠️ Seamless API Integrations</h4>
+                  <i class="bx">🛠️</i>
+                  <h4>Seamless API Integrations</h4>
                   <p>We will help you integrate effortlessly with various APIs, enabling a <strong>wide range of functionalities</strong> such as event registration, feedback gathering, payment processing, and subscription management. This streamlined approach creates a convenient and efficient customer experience, further enhancing your business offerings.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-                  <h4>📈 Drive Revenue Growth with Tangible Results</h4>
+                  <i class="bx">📈</i>
+                  <h4>Drive Revenue Growth with Tangible Results</h4>
                   <p>By efficiently handling customer inquiries, guiding users through the sales funnel, and providing personalized product and service recommendations, your ChatGPT-driven chatbot can contribute to a <strong>20% increase in sales and revenue</strong>, directly impacting your bottom line and business growth.</p>
                 </div>
               </div>
